changed favicon to pixelated favicon

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,600;1,600&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
-    <link rel="icon" type="image/x-icon" href="images/codepin-logo-transparent.png">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <title>CodePin</title>
 </head>
 <body>
