--- a/public/css/pinsStyle.css
+++ b/public/css/pinsStyle.css
@@ -19,6 +19,7 @@ body {
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 62.5px;
     padding: 1% 3%;
+    min-width: fit-content;
 }
 
 html {
@@ -118,14 +119,22 @@ h1.pin-dashboard {
 div.main-container {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 div.snippet.out {
-    display: contents;
+    display: flex;
+    margin: auto;
+    width: min-content;
+    flex-direction: column;
+    margin-top: 0;
 }
 
 div.snippet.in {
     margin: 0 1%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 h3.snippet {
@@ -152,7 +161,7 @@ p.snippet {
     background-color: var(--black-text);
     color: var(--white-text);
     padding: 1.2rem;
-    ;
+    min-width: 300px;
 }
 
 /* Form Styling */
