--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -19,8 +19,7 @@
     <img class="logo" src="/images/codepin-logo-transparent.png" alt="CodePin Logo">
     <ul>
       <li class="header" id="logoutButton"><a class="btn red logout" href="/logout" role="button">Logout</a></li>
-      <li class="header" id="toPrivateBtn"><a href="/pins" class="btn blue pin-user" role="button">Go to
-          personal dashboard</a></li>
+      <li class="header" id="toPrivateBtn"><a href="/pins" class="btn blue pin-user" role="button">Personal Dashboard</a></li>
     </ul>
   </header>
   
@@ -28,23 +27,59 @@
     <h1 class="pin-dashboard">See It.</h1>
     <div class="main-container">
       <div class="snippet out" id="snippetsContainer">
-    <% snippets.forEach( el=> { %>
-      <div class="snippet in pubDash" data-id='<%=el._id%>'>
-        <h3 class="snippet">
-          <%= el.title %>
-        </h3>
-        <!-- leave this line on single line to keep formatting -->
-        <div class="wrapCode code"><%=decodeURIComponent(el.snippet)%></div>
-        <!------------------------------------------------------->
-        <h4 class="snippet">
-          <%= el.language %>
-        </h4>
-        <p class="snippet">
-          <%= el.description %>
-        </p>
+        <% for(i = 0; i < snippets.length; i+= 3){ %>
+          <div class="snippet in pubDash" data-id='<%=snippets[i]._id%>'>
+            <h3 class="snippet">
+              <%= snippets[i].title %>
+            </h3>
+            <!-- leave this line on single line to keep formatting -->
+            <div class="wrapCode code"><%=decodeURIComponent(snippets[i].snippet)%></div>
+            <!------------------------------------------------------->
+            <h4 class="snippet">
+              <%= snippets[i].language %>
+            </h4>
+            <p class="snippet">
+              <%= snippets[i].description %>
+            </p>
+          </div>
+        <% } %>
       </div>
-      <% }) %>
-  </div>
+      <div class="snippet out" id="snippetsContainer">
+        <% for(i = 1; i < snippets.length; i+= 3){ %>
+          <div class="snippet in pubDash" data-id='<%=snippets[i]._id%>'>
+            <h3 class="snippet">
+              <%= snippets[i].title %>
+            </h3>
+            <!-- leave this line on single line to keep formatting -->
+            <div class="wrapCode code"><%=decodeURIComponent(snippets[i].snippet)%></div>
+            <!------------------------------------------------------->
+            <h4 class="snippet">
+              <%= snippets[i].language %>
+            </h4>
+            <p class="snippet">
+              <%= snippets[i].description %>
+            </p>
+          </div>
+        <% } %>
+      </div>
+      <div class="snippet out" id="snippetsContainer">
+        <% for(i = 2; i < snippets.length; i+= 3){ %>
+          <div class="snippet in pubDash" data-id='<%=snippets[i]._id%>'>
+            <h3 class="snippet">
+              <%= snippets[i].title %>
+            </h3>
+            <!-- leave this line on single line to keep formatting -->
+            <div class="wrapCode code"><%=decodeURIComponent(snippets[i].snippet)%></div>
+            <!------------------------------------------------------->
+            <h4 class="snippet">
+              <%= snippets[i].language %>
+            </h4>
+            <p class="snippet">
+              <%= snippets[i].description %>
+            </p>
+          </div>
+        <% } %>
+      </div>
   </div>
 
   <script src="js/main.js"></script>
