--- a/views/pins.ejs
+++ b/views/pins.ejs
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
-    <title>CodePin</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,600;1,600&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="css/pinsStyle.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+        <title>CodePin</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,600;1,600&display=swap"
+            rel="stylesheet">
+        <link rel="stylesheet" href="css/pinsStyle.css">
+    </head>
 
-<body>
+    <body>
     <header>
         <img class="logo" src="/images/codepin-logo-transparent.png" alt="CodePin Logo">
         <ul>
@@ -24,43 +24,80 @@
     </header>
     <main>
         <h1 class="pin-dashboard">Pin It.</h1>
+        <form action="/pins/createSnippet" method='POST' id="snippetForm">
+            <textarea id="snippetTextArea" name="todoItem" placeholder="Enter Code Snippet..." required></textarea>
+            <input type="text" placeholder="Enter Title" name='codeTitle' required>
+            <input type="text" placeholder="Enter Description" name='codeDescription'>
+            <select name="language">
+                <% const LANGUAGES=['HTML', 'CSS' , 'Python' , 'Java' , 'JavaScript' , 'Swift' , 'C++' , 'C#' , 'R'
+            , 'Golang (Go)' , 'Ruby' ] %>
+                <% for (var i=0; i < LANGUAGES.length; i++) { %>
+                <option value = <%=LANGUAGES[i] %>><%=LANGUAGES[i] %>
+                </option>
+                <% } %>
+            </select>
+            <button id="submitButton" type="submit">Pin It!</button>
+        </form>
         <div class="main-container">
             <div class="snippet out" id="snippetsContainer">
-                <% snippets.forEach( el=> { %>
-            <div class='snippet in userDash' data-id='<%=el._id%>'>
-                <h3 class="snippet">
-                    <%= el.title %>
-                </h3>
-                <!-- leave this line on a single line to keep formatting -->
-                <div class="wrapCode code"><%= decodeURIComponent(el.snippet) %></div>
-                <!-------------------------------------------------------->
-                <h4 class="snippet">
-                    <%= el.language %>
-                </h4>
-                <p class="snippet">
-                    <%= el.description %>
-                </p>
-                <button class="btn del">Delete</button>
+                <!-- first column, loops through every third snippet starting at zero -->
+                <% for(i = 0; i < snippets.length; i+= 3){ %>
+                    <div class="snippet in pubDash" data-id='<%=snippets[i]._id%>'>
+                    <h3 class="snippet">
+                        <%= snippets[i].title %>
+                    </h3>
+                    <!-- leave this line on single line to keep formatting -->
+                    <div class="wrapCode code"><%=decodeURIComponent(snippets[i].snippet)%></div>
+                    <!------------------------------------------------------->
+                    <h4 class="snippet">
+                        <%= snippets[i].language %>
+                    </h4>
+                    <p class="snippet">
+                        <%= snippets[i].description %>
+                    </p>
+                    </div>
+                <% } %>
             </div>
-            <% }) %>
-    </div>
-    </div>
-
-            <form action="/pins/createSnippet" method='POST' id="snippetForm">
-                <textarea id="snippetTextArea" name="todoItem" placeholder="Enter Code Snippet..." required></textarea>
-                <input type="text" placeholder="Enter Title" name='codeTitle' required>
-                <input type="text" placeholder="Enter Description" name='codeDescription'>
-                <select name="language">
-                    <% const LANGUAGES=['HTML', 'CSS' , 'Python' , 'Java' , 'JavaScript' , 'Swift' , 'C++' , 'C#' , 'R'
-                , 'Golang (Go)' , 'Ruby' ] %>
-                    <% for (var i=0; i < LANGUAGES.length; i++) { %>
-                    <option value = <%=LANGUAGES[i] %>><%=LANGUAGES[i] %>
-                    </option>
-                    <% } %>
-                </select>
-                <button id="submitButton" type="submit">Pin It!</button>
-                </form>
-        </main>
+            <div class="snippet out" id="snippetsContainer">
+                <!-- second column, loops through every third snippet starting at one -->
+                <% for(i = 1; i < snippets.length; i+= 3){ %>
+                    <div class="snippet in pubDash" data-id='<%=snippets[i]._id%>'>
+                    <h3 class="snippet">
+                        <%= snippets[i].title %>
+                    </h3>
+                    <!-- leave this line on single line to keep formatting -->
+                    <div class="wrapCode code"><%=decodeURIComponent(snippets[i].snippet)%></div>
+                    <!------------------------------------------------------->
+                    <h4 class="snippet">
+                        <%= snippets[i].language %>
+                    </h4>
+                    <p class="snippet">
+                        <%= snippets[i].description %>
+                    </p>
+                    </div>
+                <% } %>
+            </div>
+            <div class="snippet out" id="snippetsContainer">
+                <!-- third column, loops through every third snippet starting at two -->
+                <% for(i = 2; i < snippets.length; i+= 3){ %>
+                    <div class="snippet in pubDash" data-id='<%=snippets[i]._id%>'>
+                    <h3 class="snippet">
+                        <%= snippets[i].title %>
+                    </h3>
+                    <!-- leave this line on single line to keep formatting -->
+                    <div class="wrapCode code"><%=decodeURIComponent(snippets[i].snippet)%></div>
+                    <!------------------------------------------------------->
+                    <h4 class="snippet">
+                        <%= snippets[i].language %>
+                    </h4>
+                    <p class="snippet">
+                        <%= snippets[i].description %>
+                    </p>
+                    </div>
+                <% } %>
+            </div>
+        </div>
+    </main>
     <script src="js/main.js"></script>
     </body>
 </html>
