--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -39,8 +39,13 @@
               <%= snippets[i].language %>
             </h4>
             <p class="snippet">
-              <%= snippets[i].description %>
+              <%= snippets[0].description %>
             </p>
+            <% if(favorites.includes(snippets[i]._id)) { %>
+              <button class="unfavorite_btn">Unfavorite</button>
+              <%} else {%>
+              <button class="favorite_btn">Favorite</button>
+            <%}%>
           </div>
         <% } %>
       </div>
@@ -51,7 +56,7 @@
               <%= snippets[i].title %>
             </h3>
             <!-- leave this line on single line to keep formatting -->
-            <div class="wrapCode code"><%=decodeURIComponent(snippets[i].snippet)%></div>
+            <div class="wrapCode code"><%=decodeURIComponent(snippets[i]._id)%></div>
             <!------------------------------------------------------->
             <h4 class="snippet">
               <%= snippets[i].language %>
@@ -82,7 +87,7 @@
       </div>
   </div>
 
-  <script src="js/main.js"></script>
+  <script src="../js/main.js"></script>
   </main>
 </body>
 
