--- a/views/pins.ejs
+++ b/views/pins.ejs
@@ -19,7 +19,7 @@
         <img class="logo" src="/images/codepin-logo-transparent.png" alt="CodePin Logo">
         <ul>
             <li class="header" id="logoutButton"><a class="btn red logout" href="/logout" role="button">Logout</a></li>
-            <li class="header" id="toPublicBtn"><a href="/pins/dashboard" class="btn blue pin-dash" role="button">Public Dashboard</a></li>
+            <li class="header" id="toPublicBtn"><a href="pins/dashboard" class="btn blue pin-dash">Public Dashboard</a></li>
         </ul>
     </header>
     <main>
