--- a/views/pins.ejs
+++ b/views/pins.ejs
@@ -53,6 +53,7 @@
                     <p class="snippet">
                         <%= snippets[i].description %>
                     </p>
+                    <button class="btn del">Delete</button>
                     </div>
                 <% } %>
             </div>
